--- a/newcommand.tex
+++ b/newcommand.tex
@@ -70,6 +70,7 @@ distance=3cm,inner sep=2pt}}
 
 \newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
 \newcolumntype{P}[1]{>{$}M{#1}<{$}}
+\newcolumntype{Y}{>{\centering\arraybackslash}X}
 
 %%%%%%%%%%%%%%%%%TIKZ STYLE%%%%%%%%%%%
     \tikzstyle{tree}=[circle,draw=gray!70!,minimum width=0.7cm]
