--- a/part2/CECSP/tabularRS.tex
+++ b/part2/CECSP/tabularRS.tex
@@ -3,17 +3,13 @@
     \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
       \hline
       \rule[-0.8em]{0pt}{2em} 
-      $\bmin=0$ & \multicolumn{2}{c|}{$W_i\le f_i(\bmin)(\LE -\ES )$} &
-                                                                        \multicolumn{2}{c|}{$W_i\ge
-                                                                        f_i(\bmin)(\LE
-                                                                        -\ES
-                                                                        )$}\\ 
+      $\bmin=0$ & \multicolumn{2}{c|}{$W_i\le f_i(\bmin)(\LE -\ES )$}
+& \multicolumn{2}{c|}{$W_i\ge f_i(\bmin)(\LE -\ES )$}\\
       \hline 
-      \rotatebox{-90}{$t_1 < \emin$} & \rotatebox{-90}{$ \LE > t_1 \ge \smax \lor
-                                       t_1 \le \LE - W_i / f_i(\bmin)$} & \rotatebox{-90}{$t_1 < \smax
-                                                                          \lor t_1 > \LE - W_i / f_i(\bmin)$} & \rotatebox{-90}{$ \LE > t_1
-                                                                                                                \ge \smax \lor t_1 \le \ES $}& \rotatebox{-90}{$t_1 < \smax \lor
-                                                                                                                                               t_1 > \ES $}\\
+      \rotatebox{-90}{$t_1 < \emin$} & \rotatebox{-90}{$ t_1 <\LE $} &
+\rotatebox{-90}{$ \smax>t_1 > \LE - W_i / f_i(\bmin)$} &
+\rotatebox{-90}{$t_1 < \LE  $}&
+\rotatebox{-90}{$\smax > t_1 > \ES $}\\
       \hline
       $\inter[t_1][\LE ]$ & $\inter[t_1][\LE ]$& $[ t_1,\bd{t_1}[ $ &
                                                                       $\inter[t_1][\LE ]$& $[ t_1,\bd{t_1}[ $ \\
