--- a/part3/CECSP/amelioration_modele.tex
+++ b/part3/CECSP/amelioration_modele.tex
@@ -31,7 +31,7 @@ proposées pour contribuer à l'amélioration des performances des
 modèles à événements.
  
 \subsection{Amélioration des modèles indexés par le temps}
-
+\label{sec:ER_TI}
 Dans ce paragraphe, nous montrons comment est utilisé le
 raisonnement énergétique décrit au paragraphe~\ref{sec:ER_CECSP} pour
 exhiber des inégalités valides pour les modèles de programmation
@@ -282,7 +282,7 @@ suivant.
 
 
 \subsubsection{Inégalités de non préemption}
-
+\label{sec:nonPreem}
 Dans ce paragraphe, nous présentons un ensemble d'inégalités que nous
 utilisons pour donner une description minimale du polyèdre défini par
 l'ensemble de toutes les affectations possibles des variables binaires
@@ -499,6 +499,7 @@ Le paragraphe suivant présente d'autres inégalités valides pour le
 
 \subsubsection{Autres inégalités valides}
 
+\label{sec:maxDist}
 Dans ce paragraphe, nous décrivons plusieurs ensembles d'inégalités
 valides pour le \RCPSP~ et le \CECSP. Dans la suite, nous considérons
 qu'un événement correspond à une et une seule date de début/fin,
@@ -508,7 +509,6 @@ toujours possible puisque $|\E|=2n$. De plus, l'ajout de cette
 supposition ne change pas la véracité de ce qui précède. 
 
 \paragraph{Séparation maximale entre deux événements} 
-
 Les inégalités définies dans ce paragraphe sont des inégalités bornant
 supérieurement la valeur de $t_{e+1}- t_e, \forall e\in \Em$. Pour
 définir ces inégalités, nous étudions les fenêtres de temps de chaque
