--- a/part4/instances.tex
+++ b/part4/instances.tex
@@ -10,7 +10,7 @@ de temps pour le \RCPSP, appliqué sur les instances comme
 pré-traitement à leur résolution.
 
 \subsection{Instances du \CECSP}
-
+\label{sec:instance_CECSP}
 Les instances utilisées dans le cadre du \CECSP sont regroupées en
 quatre familles selon les caractéristiques de leurs fonctions de
 rendements et de l'énergie que les activités requièrent. Dans un
